--- a/frontend/src/assets/sass/sections/aboutMe.scss
+++ b/frontend/src/assets/sass/sections/aboutMe.scss
@@ -48,12 +48,3 @@
     }
   }
 }
-
-//Night mode
-body {
-  &.dark {
-    .about-me {
-      color: map-get($dark, mystic);
-    }
-  }
-}
