--- a/frontend/src/assets/sass/sections/footer.scss
+++ b/frontend/src/assets/sass/sections/footer.scss
@@ -19,12 +19,11 @@
 
       a {
         text-decoration: none;
-        color: rgba($color: #000000, $alpha: 1);
-        transition: color 0.3s;
+        transition: color 0.2s;
 
         &:hover {
           color: map-get($dark, mystic);
-          transition: color 0.3s;
+          transition: color 0.15s;
         }
 
         .icon {
@@ -45,26 +44,6 @@
 
     li {
       font-size: 1.5rem;
-    }
-  }
-}
-
-body {
-  &.dark {
-    .footer {
-      background: map-get($dark, blue-bayoux-dark);
-
-      a {
-        color: map-get($dark, mystic);
-
-        &:hover {
-          color: #000000;
-        }
-      }
-
-      .menu {
-        color: #000000;
-      }
     }
   }
 }
