--- a/frontend/src/assets/sass/sections/skills.scss
+++ b/frontend/src/assets/sass/sections/skills.scss
@@ -61,11 +61,3 @@
     }
   }
 }
-
-body {
-  &.dark {
-    .skills {
-      color: map-get($dark, mystic);
-    }
-  }
-}
