--- a/frontend/src/assets/sass/sections/work.scss
+++ b/frontend/src/assets/sass/sections/work.scss
@@ -22,11 +22,3 @@
     }
   }
 }
-
-body {
-  &.dark {
-    .works {
-      color: map-get($dark, mystic);
-    }
-  }
-}
